add cloud animate

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <image class="mountBg" xlink:href="https://assets.codepen.io/721952/mountBg.png" width="1200" height="800"/>    
     <image class="mountMg" xlink:href="https://assets.codepen.io/721952/mountMg.png" width="1200" height="800"/>    
     <image class="cloud2" xlink:href="https://assets.codepen.io/721952/cloud2.png" width="1200" height="800"/>    
-    <!-- <image class="cloud4" xlink:href="https://assets.codepen.io/721952/cloud2.png" width="1200" height="800"/>     -->
+    <image class="cloud4" xlink:href="https://assets.codepen.io/721952/cloud2.png" width="1200" height="800"/>    
     <image class="mountFg" xlink:href="https://assets.codepen.io/721952/mountFg.png" width="1200" height="800"/>
     <image class="cloud1" xlink:href="https://assets.codepen.io/721952/cloud1.png" width="1200" height="800"/>
     <image class="cloud3" xlink:href="https://assets.codepen.io/721952/cloud3.png" width="1200" height="800"/>
